# slurm-receipt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/slurm_receipt/: __init__.py  __main__.py  calc.py  cli.py  roast.py  sacct.py  tui.py
